# poetry_install_error

./: README.md  reproduce_github_poetry_issue.ps1
prj1/: pyproject.toml
prj2/: pyproject.toml
prj3/: pyproject.toml
